# plasma-workspace

runners/: CMakeLists.txt
runners/big/: CMakeLists.txt  bigrunner.cpp  bigrunner.h  plasma-runner-big.desktop
runners/services/: servicerunner.cpp
